@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11115] "Bruges FedoraAuxiliaryMain?"
    - bug [11117] "Efter refaktorering af DatadockMain mangler den test"
    - bug [11103] "Processqueue og PTIManager bruger Vector, skal nok være ArrayList"
    - bug [10936] "XMLDCHarvester pluginnet skal laves om til at benytte et javascript"
